Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-08-10 Gal
 PATCH: Code cleanup. Removed commented out code.
  Src/Common: SuperComboBox.cpp

2006-08-09 Jan Hryz
 Czech translation - update
  Src/Languages/Czech/MergeCzech.rc

2006-08-09 Jochen
 PATCH: [ 1310951 ] Option to copy DirCmpReport to clipboard
  Src: DirCmpReport.cpp DirCmpReport.h DirCmpReportDlg.cpp DirCmpReportDlg.h
   Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2006-08-08 Jan Hryz
 Czech translation - update
  Src/Languages/Czech/MergeCzech.rc

2006-08-08 WinMerge experimental release 2.5.5.6 (cvs)

2006-08-08 Kimmo
 BUG: [ 1535835 ] Import settings from the file
  Src/Common: PreferencesDlg.cpp PreferencesDlg.h
 PATCH: [ 1536240 ] Fix diff count numbers for real
  Src: DiffWrapper.cpp DirScan.cpp
  Src/diffutils/src: analyze.c UTIL.c

2006-08-07 Jochen
 PATCH: [ 1514487 ] Merge7z DllBuild 0018
  Merge7z: Merge7z311.cpp Merge7z409.cpp Merge7zCommon.cpp Merge7zCommon.h
   revision.txt Merge7z*.dsp
  Merge7z new files: Merge7z433.dsp Merge7z434.dsp Merge7z435.dsp Merge7z436.dsp
   Merge7z437.dsp Merge7z438.dsp Merge7z439.dsp Merge7z440.dsp Merge7z442.dsp
  Merge7zInstaller: Installer.cpp Installer.rc Files.rc2
 Change recommended version of 7-Zip to 4.42
  Src: 7zCommon.cpp

2006-08-07 Kimmo
 PATCH: [ 1535175 ] Shell ext: Add flag for subfolder inclusion
  ShellExtension: WinMergeShell.cpp WinMergeShell.h
 Bump ShellExtension version to 1.8.0
  ShellExtension: ShellExtension.rc

2006-08-06 Takashi
 BUG: [ 1533292 ] crash when specifying nonexistent project file.
  Src: XmlDoc.cpp

2006-08-05 Kimmo
 PATCH: [ 1534770 ] Add "don't wrap end of file" option for Find
  Src: Merge.rc resource.h
  Src/editlib: ccrystaleditview.cpp ccrystaltextview.cpp ccrystaltextview.h
   ceditreplacedlg.cpp cfindtextdlg.cpp cfindtextdlg.h
  Src/Languages/*: Merge*.rc
 BUG: [ 1534461 ] WinMerge 2.5.5.5 ingoring subfolders option in project files